played with dealer total to stop cards jumping when score revealed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body{
   font-family: Arial, sans-serif;
 }
 .hidden {
-  display: none;
+  display: hidden;
 }
 
 .relative {
